Added a project link

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,10 @@
 <body>
 	<div>
 		<h1>Rachel Duncan</h1>
-		<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+		<p>human-computer interaction &middot; student &middot; programmer</p>
 	</div>
-	
+
 	<h4>Project Portfolio</h4>
+	<div>
+		<a href = "https://docs.google.com/document/d/10Q86VvzJE6lP2pTl6uBHEWnOCtLBrqNYMxfrJA05T7M/edit" target="_blank">Media Fast</a>
+	</div>
