--- a/static/index.html
+++ b/static/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-	<div>
+	<div class="project">
 		<h1>Rachel Duncan</h1>
 		<p>human-computer interaction &middot; student &middot; programmer</p>
 	</div>
+
 
 	<h4>Project Portfolio</h4>
 	<div>
